# CourseDesignTasks

./: CMakeLists.txt  README.md
codes/: code2.c  generator.c
include/: ast.h  ast_parser.h  ast_serial.h  edit_distance.c.h  std_token.h  tokenizer.h
src/: ast.c  ast_parser.c  ast_serial.c  edit_distance.c  main.c  std_token.c  tokenizer.c
tests/: test_tokenizer.c
